havia duplicidade no código que foi removido
